# harxhar

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COWORK_DL_INSTRUCTIONS.md  Makefile  README.md  _carc_csv_recovery.py  _cpu_array.sh  _cpu_array.slurm  _h2_migrate_leaked_chunks.py  _lgbm_carc_apr30.slurm  _run_task.py  aggregate.py  aggregate_exp.py  aggregate_exp_tod.py  conftest.py  data.py  data_coef.py  data_sqrt.py  data_tod.py  harx.py  harx_coef.py  harx_sqrt.py  harx_tod.py  hpc.yaml  patchts_backtest.ipynb  pre_sync_check.py  project.yaml  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt  rolling.py  run_all.slurm  run_best.slurm  run_single.slurm  submit_carc.slurm  submit_feature_transforms.py  (+5 more)
.claude/: settings.json  settings.local.json
.hpc/: _build_tasks.py  axes.yaml  cli.py  tasks.py
__pycache__/: rolling._get_zscore_params-22.py313.1.nbc  rolling._get_zscore_params-22.py313.2.nbc  rolling._get_zscore_params-22.py313.3.nbc  rolling._get_zscore_params-22.py313.nbi  rolling._stats_update_core-6.py313.1.nbc  rolling._stats_update_core-6.py313.2.nbc  rolling._stats_update_core-6.py313.3.nbc  rolling._stats_update_core-6.py313.nbi
_strategy_staging/: 01_module_header.py  02_bs_gamma.py  03_trade_date_and_underlying.py  04_filter.py  05_pnl.py  06_smoke_tests.py  07_markdown.json
all30min/: spy_and_sentiment.parquet  time_categories.parquet  vix_and_voldemand.parquet
colab/: README.md
core/: __init__.py  remote.py
experiments/: example_model_comparison.yaml  example_subgroup_analysis.yaml
logs/: best_model_1.out  best_model_10.out  best_model_100.out  best_model_11.out  best_model_12.out  best_model_13.out  best_model_14.out  best_model_15.out  best_model_16.out  best_model_17.out  best_model_18.out  best_model_19.out  best_model_2.out  best_model_20.out  best_model_21.out  best_model_22.out  best_model_23.out  best_model_24.out  best_model_25.out  best_model_26.out  best_model_27.out  best_model_28.out  best_model_29.out  best_model_3.out  best_model_30.out  best_model_31.out  best_model_32.out  best_model_33.err  best_model_33.out  best_model_34.out  best_model_35.out  best_model_36.out  best_model_37.out  best_model_38.out  best_model_39.out  best_model_4.out  best_model_40.out  best_model_41.out  best_model_42.out  best_model_43.out  (+61 more)
notebooks/: _build_package.py  _export_executor.py  _exporter.py  ae_ridge_backtest.ipynb  ae_ridge_colab.ipynb  ae_ridge_viz.ipynb  analyze_results.ipynb  dl_ae_ridge.ipynb  dl_patchts.ipynb  dl_runner.ipynb  gpu_colab.ipynb  ml_baseline.ipynb  ml_lightgbm.ipynb  ml_pcr.ipynb  ml_random_forest.ipynb  ml_ridge.ipynb  ml_xgboost.ipynb  patchts_backtest.ipynb  patchts_colab.ipynb  patchts_viz.ipynb  run_experiment.ipynb  scaling_law_colab.ipynb  scaling_law_viz.ipynb  tune_tree.ipynb
results/: dl_global_results_summary.csv
results_best_model/: results_chunk_1.csv  results_chunk_10.csv  results_chunk_10_coefs.npz  results_chunk_11.csv  results_chunk_11_coefs.npz  results_chunk_12.csv  (+191 more)
(+21235 files in other folders)
