[project]
name = "harxhar"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "harxhar-core",
    "harxhar-ml",
    "harxhar-dl",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["packages/dl/notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring CUDA (deselect with '-m \"not gpu\"')",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:statsmodels",
    "ignore::UserWarning:lightgbm",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
