[project]
name = "vol-cfm"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["projects/dl/notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["core/tests", "projects/ml/tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring CUDA (deselect with '-m \"not gpu\"')",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:statsmodels",
    "ignore::UserWarning:lightgbm",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
