[project]
name = "vol-cfm"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["projects/dl/notebooks/", "_strategy_staging/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.lint.per-file-ignores]
# Jupyter notebooks: each cell is checked as if it were its own file, but
# our notebooks legitimately re-import modules across cells, define imports
# below docstrings, and use `from __future__` after the cell prelude.
# Exempt the notebook-only idioms; semantic errors (undefined names, etc.)
# still surface.
"*.ipynb" = ["E401", "E402", "E731", "F401", "F404", "F541", "F811", "F821", "I001", "SIM105"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["core/tests", "projects/ml/tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring CUDA (deselect with '-m \"not gpu\"')",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:statsmodels",
    "ignore::UserWarning:lightgbm",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
